--- a/less/etalab-mediawiki.less
+++ b/less/etalab-mediawiki.less
@@ -14,10 +14,10 @@
     }
 }
 
-.topmenu .user button.tofix {
-    line-height: 30px;
-    padding-left: 10px;
-}
+// .topmenu .user button.tofix {
+//     line-height: 30px;
+//     padding-left: 10px;
+// }
 
 #toc, .toc {
     // .well();
@@ -41,19 +41,19 @@
     .grey-link();
 }
 
-.nav-tabs {
-    > li > a {
-        line-height: 0.9;
-        color: white;
-        background-color: #aeaeae;
+// .nav-tabs {
+//     > li > a {
+//         line-height: 0.9;
+//         color: white;
+//         background-color: #aeaeae;
 
-        &:hover {
-            color: black;
-            background-color: #aeaeae;
-            border: 1px solid transparent;
-        }
-    }
-}
+//         &:hover {
+//             color: black;
+//             background-color: #aeaeae;
+//             border: 1px solid transparent;
+//         }
+//     }
+// }
 
 .page-header {
     color: @dark_text;
