--- a/css/etalab-mediawiki.css
+++ b/css/etalab-mediawiki.css
@@ -212,7 +212,7 @@ table {
   img {
     max-width: 100% !important;
   }
-  @page  {
+  @page {
     margin: 2cm .5cm;
   }
   p,
@@ -1583,7 +1583,6 @@ input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
   /* IE8-9 */
-
   line-height: normal;
 }
 input[type="file"] {
@@ -6458,25 +6457,18 @@ ul.card-list .card .card-text-mask {
   height: 50px;
   background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 69%, #ffffff 99%);
   /* FF3.6+ */
-
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(69%, #ffffff), color-stop(99%, #ffffff));
   /* Chrome,Safari4+ */
-
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 69%, #ffffff 99%);
   /* Chrome10+,Safari5.1+ */
-
   background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 69%, #ffffff 99%);
   /* Opera 11.10+ */
-
   background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 69%, #ffffff 99%);
   /* IE10+ */
-
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 69%, #ffffff 99%);
   /* W3C */
-
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
   /* IE6-9 */
-
 }
 ul.card-list .card h4 {
   margin: 0 0 8px;
@@ -7477,6 +7469,18 @@ small.fork {
   color: #248ae3 !important;
   text-transform: uppercase;
   border: 2px solid #248ae3;
+  font-size: 9px;
+  margin-left: 3px;
+  font-weight: bold;
+  top: -1px;
+  position: relative;
+  white-space: nowrap;
+}
+small.deleted {
+  padding: 2px 4px;
+  color: #ff0000 !important;
+  text-transform: uppercase;
+  border: 2px solid #ff0000;
   font-size: 9px;
   margin-left: 3px;
   font-weight: bold;
